objects/CoApplicant__c.object
<CustomObject>
    <description>To store details about household members who are co-applicants of the primary contact.</description>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Co-Applicants</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoApplicantName__c</fullName>
        <formula>Contact__r.FirstName &amp; &apos; &apos; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Co-Applicants</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Co-Applicants</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Co-Applicant</label>
    <nameField>
        <displayFormat>CAPP-{00000}</displayFormat>
        <label>Co-Applicant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>